syntax = "proto2";
option go_package = "git.juniper.net/iceberg/healthbot-ingest-jti-native/pkg/jti/adapters/_junos/schema";
import "telemetry_top.proto";

extend JuniperNetworksSensors {
   optional components_debug jnpr_components_debug_ext = 107;
}

message components_debug {
   message component_list {
      optional string name = 51 [(telemetry_options).is_key = true];
      optional cpu_type cpu = 151;
      message cpu_type {
         optional utilization_type utilization = 151;
         message utilization_type {
            optional state_type state = 151;
            message state_type {
               optional string name = 51;
               optional uint32 instant = 52;
               optional uint32 avg = 53;
               optional uint32 min = 54;
               optional uint32 max = 55;
               optional uint64 interval = 56;
               optional uint64 min_time = 57;
               optional uint64 max_time = 58;
            }
         }
      }
   }
   repeated component_list component = 151;
}
